[build-system]
requires = ["setuptools>=68", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "diffenator2"
description = "Compare two fonts"
authors = [
  { name = "Marc Foley", email = "m.foley.88@gmail.com" }
]
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
  "fonttools[ufo]>=4.52.1",
  "jinja2",
  "Pillow",
  "glyphsets==0.6.13",
  "glyphsLib<6",
  "uharfbuzz",
  "pyahocorasick",
  "selenium>=4.4.3",
  "ninja",
  "protobuf>=3.19.2,<=3.20.3",
  "gflanguages",
  "freetype-py",
  "blackrenderer[skia]>=0.6.0",
  "unicodedata2>=15.0.0,<16",
  "tqdm>=4.64.1",
  "youseedee>=0.5.0",
  "python-bidi<0.5.0",
  "setuptools<80.10",
]

[project.scripts]
_diffbrowsers = "diffenator2._diffbrowsers:main"
_diffenator = "diffenator2._diffenator:main"
diffenator2 = "diffenator2.__main__:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
